force-app/main/default/objects/Participant_Status_Integration__mdt/Participant_Status_Integration__mdt.object-meta.xml
<CustomObject>
    <description>Setting for the status updates callouts for third party vendors</description>
    <label>Participant Status Integration</label>
    <pluralLabel>Participant Status Integrations</pluralLabel>
</CustomObject>