force-app/main/default/objects/Participant_Status_Integration__mdt/fields/ApiFieldNames__c.field-meta.xml
<CustomField>
    <fullName>ApiFieldNames__c</fullName>
    <description>Names mapping for the payload</description>
    <label>ApiFieldNames</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>