force-app/main/default/objects/Participant_Status_Integration__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>Fields on the Participant Enrollment Status History Object</description>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>