force-app/main/default/objects/Participant_Status_Integration__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Developer Name of the named credential used to send request</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>