force-app/main/default/objects/Participant_Status_Integration__mdt/fields/Referral_Sources__c.field-meta.xml
<CustomField>
    <fullName>Referral_Sources__c</fullName>
    <description>Referral sources for the participal enrollment</description>
    <label>Referral Sources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>